# Portfolio-Optimization-Platform

./: .gitignore  README.md  pyproject.toml
config/: settings.yaml  universes.yaml
dashboard/: app.py
docs/: architecture.md  theory.md
src/portfolio_optimization/: __init__.py  config.py  logging_setup.py
src/portfolio_optimization/analytics/: __init__.py  attribution.py  metrics.py  report.py
src/portfolio_optimization/backtesting/: __init__.py  engine.py  result.py  strategy.py
src/portfolio_optimization/data/: __init__.py  cache.py  cleaning.py  ingestion.py
src/portfolio_optimization/data/sources/: __init__.py  base.py  yfinance_source.py
src/portfolio_optimization/estimation/: __init__.py  returns.py  risk.py
src/portfolio_optimization/examples/: __init__.py  analytics_demo.py  backtest_demo.py  frontier_demo.py
src/portfolio_optimization/optimization/: __init__.py  base.py  frontier.py  max_sharpe.py  min_variance.py  random_portfolios.py  result.py
src/portfolio_optimization/rebalancing/: __init__.py  costs.py  schedule.py
src/portfolio_optimization/visualization/: __init__.py  allocation.py  frontier_plot.py  heatmaps.py  performance.py  theme.py
tests/: conftest.py
tests/unit/: test_analytics.py  test_backtesting.py  test_cleaning.py  test_estimation.py  test_hardening.py  test_optimization.py  test_rebalancing.py  test_visualization.py
tests/validation/: test_closed_form.py  test_no_lookahead.py
